src/styles/components/_input-group.scss
.input-group {
    display: flex;
    justify-content: space-evenly;
    margin-bottom: $m-size;
    flex-direction: column;
    @media (min-width: $desktop-breakpoint) {
        flex-direction: row;
        justify-content: space-evenly;
        margin-bottom: $l-size;
    }
}

.input-group__item {
    margin-bottom: $s-size;
    
    @media (min-width: $desktop-breakpoint) {
        margin-bottom: 0;
    }
}

.input-group__item--dark {
    margin-bottom: $s-size;
    background: $darktheme-grey;
    @media (min-width: $desktop-breakpoint) {
        margin-bottom: 0;
    }
}

.input-group__item--home {
    @media (min-width: $desktop-breakpoint) {
        display: flex;
        justify-content: center
    }
}

.input__doubleline {
    display: flex;
    justify-content: space-between;
}

.date-container {
    margin: 0 0 0 1rem;
}

